@@ -1,5 +1,7 @@
 VP 9.2.1 Changelog
 ------------------------
+- add CurrentAngle() function to the gate object
+
 - add "Is Toy" checkbox to disable collision handling on mesh primitives completely. 
 
 - add collision detection to mesh primitives together with hit threshold and hit event
